--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "start": "npx tailwindcss -i ./input.css -o ./styles/style.css",
     "watch": "npx tailwindcss -i ./input.css -o ./styles/style.css --watch"
   },
   "devDependencies": {
